--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,7 @@ edition = "2021"
 
 [dependencies]
 osm = { git = "https://github.com/ximonsson/osm-rs.git" }
-polars = { version = "0.28", features = ["lazy","temporal","describe","json","parquet","dtype-datetime"] }
+polars = { version = "0.28", features = ["parquet"] }
+
+[[bin]]
+name = "osm2parquet"
